Fixed native layout on smaller screens

--- a/lab2/pages/native-styles.css
+++ b/lab2/pages/native-styles.css
@@ -78,6 +78,7 @@ div {
 .middle__right__center {
     height: 85%;
     display: table;
+    width: 100%;
 }
 
 .middle__right__center > * {
@@ -147,6 +148,7 @@ a {
 img {
     max-width: 100%;
     max-height: 100%;
+    min-width: 50px;
 }
 
 .parrots-img {
